--- a/src/main/java/react4j/vchat/public/dev/index.html
+++ b/src/main/java/react4j/vchat/public/dev/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Video Chat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
+  <meta name="theme-color" content="#000000">
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
