--- a/src/main/java/react4j/vchat/public/dev/index.html
+++ b/src/main/java/react4j/vchat/public/dev/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
   <meta name="theme-color" content="#000000">
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/vchat.css">
 </head>
 <body>
 <section id="app"></section>
