Start to move to styling from alternative app

--- a/src/main/java/react4j/vchat/public/dev/index.html
+++ b/src/main/java/react4j/vchat/public/dev/index.html
@@ -3,13 +3,18 @@
 <head>
   <meta charset="utf-8">
   <title>Video Chat</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
-  <meta name="theme-color" content="#000000">
-  <link rel="stylesheet" href="css/index.css">
-  <link rel="stylesheet" href="css/vchat.css">
+  <meta name="viewport" content="initial-scale=1,user-scalable=no">
+  <style>
+    body {
+      background: #333;
+      margin: 0;
+      color: #eee;
+    }
+  </style>
+  <link rel="stylesheet" href="css/vchat2.css">
 </head>
 <body>
-<section id="app"></section>
+<main id="app"></main>
 
 <script type="text/javascript" language="javascript" src="dev/react.js"></script>
 <script type="text/javascript" language="javascript" src="dev/react-dom.js"></script>
