--- a/src/main/java/react4j/vchat/public/prod/index.html
+++ b/src/main/java/react4j/vchat/public/prod/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Video Chat</title>
   <meta name="viewport" content="initial-scale=1,user-scalable=no">
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon" sizes="16x16">
   <style>
     body {
       background: #333;
